apps/base/audiobookshelf/audiobookshelf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
        app.kubernetes.io/name: audiobookshelf     
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:latest #
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: rclone-data
              mountPath: /audiobooks
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: audiobookshelf-config-pvc
        - name: rclone-data
          hostPath:
            path: /mnt/zurg/audiobooks
