apps/base/audiobookshelf/audiobookshelf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  type: ClusterIP
  selector:
    app: audiobookshelf
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
