apps/base/audiobookshelf/audiobookshelf-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf-ingressroute
  annotations:
    gethomepage.dev/href: "https://${SUBDOMAIN:=placeholder}.hephaestus.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Audiobookshelf"
    gethomepage.dev/description: "Self-hosted audiobook and podcast server"
    gethomepage.dev/app: audiobookshelf
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/audiobookshelf.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`${SUBDOMAIN:=placeholder}.hephaestus.markmk.com`)
      kind: Rule
      services:
        - name: audiobookshelf
          port: 80
